<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    android:id="@+id/Draw_Layout"
    tools:context=".Activity.DrawActivity" >

    <!-- Top Buttons -->

    <LinearLayout
        android:id="@+id/color_palette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/new_btn"
            android:paddingVertical="0dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic" />

        <ImageButton
            android:id="@+id/draw_btn"
            android:paddingVertical="0dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:paddingVertical="0dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/color_btn"
            android:paddingVertical="0dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/color_wheel"
            android:src="@drawable/color_wheel" />

        <ImageButton
            android:id="@+id/save_btn"
            android:paddingVertical="0dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/word_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/annie_use_your_telescope"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- Custom View -->

    <com.example.worddrawing.Resource.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/chat_btn"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Chat"
            android:padding="0dp"/>
    </LinearLayout>

</LinearLayout>
